Added scheme file loadin

--- a/Test.html
+++ b/Test.html
@@ -3,6 +3,8 @@
 	<head>
 		<script type="text/javascript" src="A-Million-Times.js"></script>
 		<script type="text/javascript" src="raphael-min.js"></script>
+		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="schemes.js"></script>
 		<title>A Million Times</title>
 	</head>
 	<body>
