--- a/Test.html
+++ b/Test.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script type="text/javascript" src="A-Million-Times.js"></script>
-		<script type="text/javascript" src="raphael-min.js"></script>
-		<script type="text/javascript" src="jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="schemes.js"></script>
-		<title>A Million Times</title>
+		<script type="text/javascript" src="clockwall.js"></script>
+		<script type="text/javascript" src="lib/raphael-min.js"></script>
+		<script type="text/javascript" src="lib/jquery-1.11.1.min.js"></script>
+		<script type="text/javascript" src="resource/schemes.js"></script>
+		<title>Clock Wall</title>
 	</head>
 	<body>
 		<script type="text/javascript">
-			new AMillionTimes(1000, 1000);
+			new clockwall(1000, 1000);
 		</script>
 	</body>
 </html>
