Removed console log
Signed-off-by: Shen Yichen <2007.yichen@gmail.com>

--- a/Test.html
+++ b/Test.html
@@ -4,6 +4,9 @@
 		<script type="text/javascript" src="clockwall.js"></script>
 		<script type="text/javascript" src="lib/raphael-min.js"></script>
 		<script type="text/javascript" src="resource/schemes.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineLite.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/RaphaelPlugin.min.js"></script>
 		<title>Clock Wall</title>
 	</head>
 	<body>
