Create Raphael paper within container
Container id or DOM is passed as first arguement of Clockwall.

 - Capitalize Clockwall

Signed-off-by: Shen Yichen <2007.yichen@gmail.com>

--- a/Test.html
+++ b/Test.html
@@ -10,8 +10,9 @@
 		<title>Clock Wall</title>
 	</head>
 	<body>
+		<div id="clockwall" style="text-align: center;"></div>
 		<script type="text/javascript">
-			new clockwall(1000, 1000);
+			new Clockwall("clockwall", 1000, 1000);
 		</script>
 	</body>
 </html>
