--- a/Test.html
+++ b/Test.html
@@ -3,10 +3,11 @@
 	<head>
 		<script type="text/javascript" src="clockwall.js"></script>
 		<script type="text/javascript" src="lib/raphael-min.js"></script>
+        <script type="text/javascript" src="lib/TweenLite.min.js"></script>
+        <script type="text/javascript" src="lib/TimelineLite.min.js"></script>
+        <script type="text/javascript" src="lib/RaphaelPlugin.min.js"></script>
 		<script type="text/javascript" src="resource/schemes.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineLite.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/RaphaelPlugin.min.js"></script>
+        
 		<title>Clock Wall</title>
 	</head>
 	<body>
@@ -16,3 +17,4 @@
 		</script>
 	</body>
 </html>
+
